Fix spacing on tablet

--- a/working/index.css
+++ b/working/index.css
@@ -141,7 +141,7 @@ h3 {
     .benefits {
         display: flex;
         flex-direction: column;
-        gap: 30px;
+        gap: 40px;
         margin-bottom: 141px;
         align-items: center;
     }
